# mulle-mmapallocator

./: .gitignore  .touch  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  clib.json  package.json
.github/workflows/: semgrep.yml
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-project.sh
.mulle/etc/match/ignore.d/: 00-user--none
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cola/: description.md.bud  example.md.bud  properties.plist
src/: mulle-dlmalloc  mulle-mmapallocator.c  mulle-mmapallocator.h
src/generic/: include-private.h  include.h
src/reflect/: README.md  _mulle-mmapallocator-include-private.h  _mulle-mmapallocator-include.h  _mulle-mmapallocator-versioncheck.h
test/: README.md
test/.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-project.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/sourcetree/: config
test/10-first/: grow-mmap.c  shared-mmap.c  static-mmap.c
test/20-static/: overflow.c
test/30-shared/: bidirectional.c  fork.c  shared-overflow.c  shared-overflow.stdout
